--- a/scss/mixin.scss
+++ b/scss/mixin.scss
@@ -1,109 +1,30 @@
-@mixin skill_rotation($wi, $ma) {
+@mixin skill_rotation($wi, $s) {
     width: $wi;
     height: $wi;
-    margin-left: $ma;
-    margin-top: $ma;
-}
+    margin-top: -50%;
+    margin-left: -50%;
 
-@mixin skill_img {
-    margin-top: -32.5px;
-    margin-left: -32.5px;
-    height: 65px;
-    width: 65px;
-    border-radius: 50%;
-    box-shadow: 0 0 34px #3a4385;
+    animation: spin-right_mo $s linear infinite;
 
-    @include responsive(tablet-size){
-        height: 40px;
-        width: 40px;
-        margin-left: -20px;
-        margin-top: -20px;
-    }
-    @include responsive(pc-size) {
-        width: 65px;
-        height: 65px;
-        margin-top: -32.5px;
-        margin-left: -32.5px;
-    }
-}
-
-@mixin big_img {
-    position: absolute;
-    width: 250px;
-
-    @include responsive(tablet-size){
-        width: 300px;
-        height: 300px;
-        margin-left: -150px;
-        margin-top: -150px;
-        text-align: center;
+    @include responsive(tablet-size) {
+        animation: spin-right $s linear infinite;
     }
 
-    @include responsive(pc-size) {
-        width: 600px;
-        height: 600px;
-        margin-left: -300px;
-        margin-top: -300px;
-        // background-color: springgreen;
-    }
-
-    img {
-        display: none;
+    div {
+        width: 45px;
+        height: 45px;
+        border-radius: 50%;
+        box-sizing: border-box;
 
         @include responsive(tablet-size) {
-            display: inline-block;
-            width: 60%;
-            margin: auto;
-            margin-bottom: 12px;
-        }
-        
-        @include responsive(pc-size) {
-            width: 65%;
-            margin: auto;
-            margin-top: 3%;
-            margin-bottom: 30px;
-        }
-    }
-
-    h2 {
-        width: 100%;
-        font: {
-            size: 2.5em;
-        }
-        margin-bottom: 8px;
-
-        @include responsive(tablet-size) {
-            font: {
-                size: 2.3em;
-            }
-            margin-bottom: 5px;
-        }
-        
-        @include responsive(pc-size) {
-            font: {
-                size: 5em;
-            }
-        }
-    }
-
-    p {
-        font: {
-            size: 1em;
+            width: 50px;
+            height: 50px;
         }
 
-        @include responsive(tablet-size) {
-            width: 50%;
-            font: {
-                size: 0.7em;
-            }
-            margin: auto;
-        }
-        
-        @include responsive(pc-size) {
-            width: 55%;
-            font: {
-                size: 1.3em;
-            }
+        img {
+            width: 100%;
+            border-radius: 50%;
+            box-shadow: 0 0 34px #3a4385;
         }
     }
 }
@@ -120,35 +41,56 @@
     left: $etc_lrft;
 }
 
-@mixin arrow_box($ab_top, $ab_lrft, $ab_he, $ab_size, $ab_line-he) {
-    // display: none;
+@mixin arrow_box($ab_top, $ab_lrft) {
+    display: none;
     position: absolute;
     top: $ab_top;
     left: $ab_lrft;
-    width: 100%;
-    height: $ab_he;
-
-    font-size: $ab_size;
+    height: 20px;
+    font-size: 0.5em;
     font-weight: 500;
     text-align: center;
-    line-height: $ab_line-he;
+    line-height: 20px;
+    padding: 0 10px;
     color: $font-color;
     border-radius: 8px;
     background: $fonh;
 
+    @include responsive(tablet-size) {
+        height: 30px;
+        font-size: 0.95em;
+        line-height: 30px;
+    }
+
+    @include responsive(pc-size) {
+        height: 35px;
+        font-size: 1.25em;
+        line-height: 35px;
+    }
+
     &::after{
         position: absolute;
-        bottom: 100%;
+        bottom: 98%;
         left: 50%;
         width: 0;
         height: 0;
-        margin-left: -10px;
+        margin-left: -5px;
         border: solid transparent;
         border-color: rgba(51, 51, 51, 0);
-        border-bottom-color: #333;
-        border-width: 10px;
+        border-bottom-color: $fonh;
+        border-width: 5px;
         pointer-events: none;
         content: ' ';
+
+        @include responsive(tablet-size) {
+            margin-left: -8px;
+            border-width: 8px;
+        }
+    
+        @include responsive(pc-size) {
+            margin-left: -10px;
+            border-width: 10px;
+        }
     }
 }
 
