--- a/scss/index.scss
+++ b/scss/index.scss
@@ -15,7 +15,7 @@ body {
     }
 
     &::-webkit-scrollbar {
-        width: 10px;
+        width: 2px;
     }
 
     &::-webkit-scrollbar-thumb {
@@ -521,7 +521,7 @@ body {
                             @include responsive(pc-size) {
                                 display: inline;
                                 font: {
-                                    size: 2.8em;
+                                    size: 2.3em;
                                 }
                                 margin-bottom: 40px;
                             }
@@ -601,88 +601,110 @@ body {
         }
 
         .skill {
-            position: relative;
             width: 100%;
             height: 100vh;
-            background-color: #1f0b47;
             overflow: hidden;
-            z-index: -1;
-
+            // z-index: -1;
+            
             .wrapper {
                 @include wrapper;
+                position: relative;
+                width: 100px;
+                height: 100vh;
 
                 .circle-menu {
-                    width: 100%;
                     height: 100vh;
                     margin: auto;
 
                     @include responsive(tablet-size) {
                         margin: auto;
+
+                        animation: spin-right 30s linear infinite;
                     }
 
                     @include responsive(pc-size) {
                         width: 100%;
                     }
 
-                    li {
-                        list-style: none;
-                        position: absolute;
-                        top: 50%;
-                        left: 100%;
-
-                        @include responsive(tablet-size) {
-                            top: 50%;
-                            left: 50%;
+                    .list {
+                        li {
+                            list-style: none;
                         }
 
                         .adobe {
-                            @include skill_rotation(42.5vh, 10s);
+                            @include skill_rotation(50%, 27%);
+
+                            @include responsive(tablet-size) {
+                                @include skill_rotation(21%, 19%);
+                            }
+
+                            @include responsive(pc-size) {
+                                @include skill_rotation(45%, 342%);
+                            }
                         }
 
                         .html_css {
-                            @include skill_rotation(55.5vh, 16s);
+                            @include skill_rotation(26%, 29.9%);
+
+                            @include responsive(tablet-size) {
+                                @include skill_rotation(36%, 312%);
+                            }
+
+                            @include responsive(pc-size) {
+                                @include skill_rotation(15%, -250%);
+                            }
                         }
 
                         .sass {
-                            @include skill_rotation(55.5vh, 15s);
+                            @include skill_rotation(70.5%, 52%);
+
+                            @include responsive(tablet-size) {
+                                @include skill_rotation( 73%, -169%);
+                            }
+
+                            @include responsive(pc-size) {
+                                @include skill_rotation( 82.5%, 240%);
+                            }
                         }
 
                         .js {
-                            @include skill_rotation(71.5vh, 18s);
+                            @include skill_rotation(60%, -106%);
+
+                            @include responsive(tablet-size) {
+                                @include skill_rotation(20%, -295%);
+                            }
+
+                            @include responsive(pc-size) {
+                                @include skill_rotation(80%, -375%);
+                            }
                         }
 
                         .jq {
-                            @include skill_rotation(71.5vh, 20s);
+                            @include skill_rotation(12.5%, 80%);
+
+                            @include responsive(tablet-size) {
+                                @include skill_rotation(90%, 72%);
+                            }
+
+                            @include responsive(pc-size) {
+                                @include skill_rotation(15%, 425%);
+                            }
                         }
                     }
-                }
 
-                @keyframes spin-right_mo {
-                    0% {
-                        transform: rotate(45deg);
-                    }
-                    50% {
-                        transform: rotate(-135deg);
+                    @keyframes spin-right {
+                        100% {
+                            transform: rotate(360deg);
                         }
-
-                    100% {
-                        transform: rotate(45deg);
-                    }
-                }
-
-                @keyframes spin-right {
-                    100% {
-                        transform: rotate(360deg);
-                    }
+                    }    
                 }
 
                 .cont_area {
                     position: absolute;
                     bottom: 2%;
-                    left: 5%;
+                    left: -110%;
                     width: 250px;
                     color: $font-color;
-                    // background-color: springgreen;
 
                     @include responsive(tablet-size){
                         position: absolute;
@@ -701,6 +723,11 @@ body {
                     }
 
                     div {
+                        display: none;
+                        &:first-child{
+                            display: block;
+                        }
+
                         img {
                             display: none;
 
@@ -723,7 +750,7 @@ body {
                             font: {
                                 size: 2em;
                             }
-                            margin-bottom: -6px;
+                            margin-bottom: -4px;
 
                             @include responsive(tablet-size) {
                                 font: {
@@ -755,7 +782,7 @@ body {
 
                             @include responsive(pc-size) {
                                 font: {
-                                    size: 1.15em;
+                                    size: 1.05em;
                                 }
                             }
                         }
@@ -765,7 +792,7 @@ body {
                 .circle {
                     position: absolute;
                     top: 50%;
-                    left: 100%;
+                    left: 250%;
                     z-index: -2;
 
                     @include responsive(tablet-size) {
@@ -778,28 +805,58 @@ body {
                         position: absolute;
                         top: 50%;
                         left: 50%;
-                        border: dashed 2px $font-color;
+                        border: dashed 2px rgba(255, 255, 255, 0.3);
                         border-radius: 50%;
 
                         transform: translate(-50%, -50%);
 
                         @include responsive(tablet-size) {
-                            border: dashed 3.5px $font-color;
+                            border: dashed 3.5px rgba(255, 255, 255, 0.3);
                         }
 
                         &:first-child {
-                            width: 95vh;
-                            height: 95vh;
+                            width: 700px;
+                            height: 700px;
+
+                            @include responsive(tablet-size) {
+                                width: 800px;
+                                height: 800px;
+                            }
+
+                            @include responsive(pc-size) {
+                                width: 1000px;
+                                height: 1000px;
+                            }
                         }
 
                         &:nth-child(2) {
-                            width: 73vh;
-                            height: 73vh;
+                            width: 550px;
+                            height: 550px;
+
+                            @include responsive(tablet-size) {
+                                width: 620px;
+                                height: 620px;
+                            }
+
+                            @include responsive(pc-size) {
+                                width: 800px;
+                                height: 800px;
+                            }
                         }
 
                         &:last-child {
-                            width: 55vh;
-                            height: 55vh;
+                            width: 400px;
+                            height: 400px;
+
+                            @include responsive(tablet-size) {
+                                width: 480px;
+                                height: 480px;
+                            }
+
+                            @include responsive(pc-size) {
+                                width: 650px;
+                                height: 650px;
+                            }
                         }
                     }
                 }            
@@ -1086,7 +1143,7 @@ body {
         
                             @include responsive(pc-size) {
                                 font: {
-                                    size: 5.5em;
+                                    size: 3.8em;
                                 }
                                 margin-bottom: 15px;
                             }
